--- a/src/TodoItem.css
+++ b/src/TodoItem.css
@@ -9,6 +9,17 @@
     background-color: rgb(204, 63, 63) !important;
     cursor: pointer;
 }
+.badgeIcon{
+    position: absolute;
+    top: 33%;
+    right: 2%;
+    vertical-align: sub;
+    z-index: 999;
+}
+.overf{
+
+    position: relative;
+}
 
 .itemHover:hover{
     cursor: pointer;
